@@ -2,6 +2,10 @@
  * #303: Add flags for setting any borgmatic configuration option from the command-line. See the
    documentation for more information:
    https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#configuration-overrides
+ * #303: Add configuration options that serve as defaults for some (but not all) borgmatic
+   action flags. For example, each entry in "repositories:" now has an "encryption" option that
+   applies to the "repo-create" action. See the documentation for more information:
+   https://torsion.org/borgmatic/docs/reference/configuration/
  * #790, #821: Deprecate all "before_*", "after_*" and "on_error" command hooks in favor of more
    flexible "commands:". See the documentation for more information:
    https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
